force-app/main/default/objects/GPMS_Relinquish_History__c/GPMS_Relinquish_History__c.object-meta.xml
<CustomObject>
    <description>Relinquish History Object</description>
    <label>Relinquish History</label>
    <nameField>
        <displayFormat>REL-{0000000}</displayFormat>
        <label>Relinquish History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relinquish History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>