force-app/main/default/objects/GPMS_Relinquish_History__c/fields/GPMS_Check_box_if_Acting__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Check_box_if_Acting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>