force-app/main/default/objects/GPMS_Relinquish_History__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>