force-app/main/default/objects/GPMS_Relinquish_History__c/fields/GPMS_Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_Name__c</fullName>
    <label>Delegate Name</label>
    <type>TextArea</type>
</CustomField>