force-app/main/default/objects/GPMS_Relinquish_History__c/fields/GPMS_Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Link_to_Documents__c</fullName>
    <inlineHelpText>User can enter TRIM reference</inlineHelpText>
    <label>Link to documents</label>
    <type>TextArea</type>
</CustomField>