force-app/main/default/objects/GPMS_Relinquish_History__c/recordTypes/Cancel_Relinquish.recordType-meta.xml
<RecordType>
    <fullName>Cancel_Relinquish</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>