force-app/main/default/objects/GPMS_Relinquish_History__c/recordTypes/Record_Decision_Relinquish.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_Relinquish</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>