force-app/main/default/objects/GPMS_Relinquish_History__c/recordTypes/Withdraw_Relinquish.recordType-meta.xml
<RecordType>
    <fullName>Withdraw_Relinquish</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>